; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/locale/extr_locale.c_list_charmaps.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/locale/extr_locale.c_list_charmaps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, i8** }
%struct.TYPE_6__ = type { i8**, i64 }

@.str = private unnamed_addr constant [26 x i8] c"could not allocate memory\00", align 1
@locales = common dso_local global %struct.TYPE_7__* null, align 8
@.str.1 = private unnamed_addr constant [9 x i8] c"US-ASCII\00", align 1
@scmp = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @list_charmaps() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = call %struct.TYPE_6__* (...) @sl_init()
  store %struct.TYPE_6__* %5, %struct.TYPE_6__** %4, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %7 = icmp eq %struct.TYPE_6__* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = call i32 @err(i32 1, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %0
  %11 = call i32 (...) @init_locales_list()
  store i64 0, i64* %1, align 8
  br label %12

12:                                               ; preds = %41, %10
  %13 = load i64, i64* %1, align 8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** @locales, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ult i64 %13, %16
  br i1 %17, label %18, label %44

18:                                               ; preds = %12
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** @locales, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 1
  %21 = load i8**, i8*** %20, align 8
  %22 = load i64, i64* %1, align 8
  %23 = getelementptr inbounds i8*, i8** %21, i64 %22
  %24 = load i8*, i8** %23, align 8
  store i8* %24, i8** %2, align 8
  %25 = load i8*, i8** %2, align 8
  %26 = call i8* @strchr(i8* %25, i8 signext 46)
  store i8* %26, i8** %3, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %40

28:                                               ; preds = %18
  %29 = load i8*, i8** %3, align 8
  %30 = getelementptr inbounds i8, i8* %29, i32 1
  store i8* %30, i8** %3, align 8
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %32 = load i8*, i8** %3, align 8
  %33 = call i32* @sl_find(%struct.TYPE_6__* %31, i8* %32)
  %34 = icmp eq i32* %33, null
  br i1 %34, label %35, label %39

35:                                               ; preds = %28
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %37 = load i8*, i8** %3, align 8
  %38 = call i32 @sl_add(%struct.TYPE_6__* %36, i8* %37)
  br label %39

39:                                               ; preds = %35, %28
  br label %40

40:                                               ; preds = %39, %18
  br label %41

41:                                               ; preds = %40
  %42 = load i64, i64* %1, align 8
  %43 = add i64 %42, 1
  store i64 %43, i64* %1, align 8
  br label %12

44:                                               ; preds = %12
  %45 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %46 = call i32* @sl_find(%struct.TYPE_6__* %45, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %47 = icmp eq i32* %46, null
  br i1 %47, label %48, label %52

48:                                               ; preds = %44
  %49 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %50 = call i8* @strdup(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %51 = call i32 @sl_add(%struct.TYPE_6__* %49, i8* %50)
  br label %52

52:                                               ; preds = %48, %44
  %53 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %54 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %53, i32 0, i32 0
  %55 = load i8**, i8*** %54, align 8
  %56 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %57 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %56, i32 0, i32 1
  %58 = load i64, i64* %57, align 8
  %59 = load i32, i32* @scmp, align 4
  %60 = call i32 @qsort(i8** %55, i64 %58, i32 8, i32 %59)
  store i64 0, i64* %1, align 8
  br label %61

61:                                               ; preds = %75, %52
  %62 = load i64, i64* %1, align 8
  %63 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %64 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %63, i32 0, i32 1
  %65 = load i64, i64* %64, align 8
  %66 = icmp ult i64 %62, %65
  br i1 %66, label %67, label %78

67:                                               ; preds = %61
  %68 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %69 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %68, i32 0, i32 0
  %70 = load i8**, i8*** %69, align 8
  %71 = load i64, i64* %1, align 8
  %72 = getelementptr inbounds i8*, i8** %70, i64 %71
  %73 = load i8*, i8** %72, align 8
  %74 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i8* %73)
  br label %75

75:                                               ; preds = %67
  %76 = load i64, i64* %1, align 8
  %77 = add i64 %76, 1
  store i64 %77, i64* %1, align 8
  br label %61

78:                                               ; preds = %61
  ret void
}

declare dso_local %struct.TYPE_6__* @sl_init(...) #1

declare dso_local i32 @err(i32, i8*) #1

declare dso_local i32 @init_locales_list(...) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32* @sl_find(%struct.TYPE_6__*, i8*) #1

declare dso_local i32 @sl_add(%struct.TYPE_6__*, i8*) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i32 @qsort(i8**, i64, i32, i32) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
